--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,15 @@ typings/
 
 /Netbeans/Process/nbproject/private/
 /Netbeans/Process/build/
+/Netbeans/PruebaHilos/nbproject/private/
+/Netbeans/PruebaHilos/build/
+/Netbeans/CalculoSuma/nbproject/private/
+/Netbeans/CalculoSuma/build/
+/Netbeans/HilosUsuarioYdaemons/nbproject/private/
+/Netbeans/HilosUsuarioYdaemons/build/
+/Netbeans/PruebaPoolDeHilos/nbproject/private/
+/Netbeans/PruebaPoolDeHilos/build/
+/Netbeans/PracticaPrimosHilos/nbproject/private/
+/Netbeans/PracticaPrimosHilos/build/
+/Netbeans/HilosSincronizacion/nbproject/private/
+/Netbeans/HilosSincronizacion/build/
